Install projet demo, install API Platform, sérialisation Posts, recherche partielle Posts, install JWT, voter pour droits sur comments, listener pour ajouter author lors de l'ajout commentaire

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -21,3 +21,7 @@ controllers:
         _locale: '%app_locales%'
     defaults:
         _locale: '%locale%'
+
+auth:
+    path: /auth
+    methods: ['POST']
