--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,16 @@
     "require": {
         "php": ">=8.2",
         "ext-pdo_sqlite": "*",
+        "api-platform/core": "^3.2",
         "doctrine/dbal": "^3.1",
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.16",
         "league/commonmark": "^2.1",
+        "lexik/jwt-authentication-bundle": "^2.20",
+        "nelmio/cors-bundle": "^2.4",
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "phpstan/phpdoc-parser": "^1.25",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "^7.0",
         "symfony/asset-mapper": "^7.0",
@@ -33,8 +38,11 @@
         "symfony/mailer": "^7.0",
         "symfony/monolog-bundle": "^3.7",
         "symfony/polyfill-intl-messageformatter": "^1.12",
+        "symfony/property-access": "7.0.*",
+        "symfony/property-info": "7.0.*",
         "symfony/runtime": "^7.0",
         "symfony/security-bundle": "^7.0",
+        "symfony/serializer": "7.0.*",
         "symfony/stimulus-bundle": "^2.12",
         "symfony/string": "^7.0",
         "symfony/translation": "^7.0",
