--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,6 +19,21 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
+        api_login:
+            pattern: ^/auth
+            stateless: true
+            json_login:
+                check_path: auth # The name in routes.yaml is enough for mapping
+                username_path: username
+                password_path: password
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+        api:
+            pattern: ^/api/
+            stateless: true
+            provider: database_users
+            jwt: ~
+
         main:
             # this firewall does not have a 'pattern' option because it applies to all URLs
             lazy: true
